// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match the snapshot when the user is not signed in 1`] = `
<header
  className="Header"
>
  <div
    className="Header--div"
  >
    <Link
      className="Header--h1--link"
      to="/"
    >
      <h1
        className="Header--h1"
      >
        Paired
      </h1>
    </Link>
    <a
      className="Header--github-link"
      href="https://github.com/hillstew/paired-fe/issues/new"
      rel="noopener noreferrer"
      target="_blank"
    >
      Submit an issue
    </a>
  </div>
</header>
`;

exports[`Header should match the snapshot when the user is signed in 1`] = `
<header
  className="Header"
>
  <div
    className="Header--div"
  >
    <Link
      className="Header--h1--link"
      to="/"
    >
      <h1
        className="Header--h1"
      >
        Paired
      </h1>
    </Link>
    <a
      className="Header--github-link"
      href="https://github.com/hillstew/paired-fe/issues/new"
      rel="noopener noreferrer"
      target="_blank"
    >
      Submit an issue
    </a>
  </div>
  <div
    className="Header--controls"
  >
    <NavLink
      className="Header--link"
      to="/schedule"
    >
      View Schedule
    </NavLink>
    <NavLink
      className="Header--link"
      to="/book-pairing"
    >
      Book a Pairing
    </NavLink>
    <button
      className="Header--button--signout"
      onClick={[MockFunction]}
    >
      Sign Out
    </button>
  </div>
</header>
`;
